--- a/src/main/webapp/WEB-INF/themes/desktop/sass/sections/_footer.scss
+++ b/src/main/webapp/WEB-INF/themes/desktop/sass/sections/_footer.scss
@@ -19,8 +19,7 @@ footer {
   }
   //pseudo elements are for Firefox
   a, a:visited, a:focus, a:active {
-    @include link-text($color: $grey-med-light, $decoration-hover: underline){
-  }
+    @include link-text($color: $grey-med-light, $decoration-hover: underline);
   .nav {
     position: relative;
     }
